# tinyinfer

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.en.md  README.md  build.sh  clean.sh  dev_log.md  image_utils.py  llm_qwen_readme.md  setup.py  test_resnet18.py  test_resnet18_fp16.py  test_resnet18_fp32.py  test_resnet18_ort.py  test_resnet18_tf32.py  test_yolox_fp16.py
flash_attention/: CMakeLists.txt  build.sh
flash_attention/flash_attn/include/: flash_api.h
flash_attention/flash_attn/lib/: CMakeLists.txt  alibi.h  block_info.h  flash.h  flash_api.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_fp16_sm80.cu  flash_fwd_split_hdim224_fp16_sm80.cu  flash_fwd_split_hdim256_fp16_sm80.cu  flash_fwd_split_hdim32_fp16_sm80.cu  flash_fwd_split_hdim64_fp16_sm80.cu  flash_fwd_split_hdim96_fp16_sm80.cu  kernel_traits.h  mask.h  rotary.h  softmax.h  static_switch.h  utils.h
impl/: CMakeLists.txt  interface.cpp
impl/include/: kernels.h
impl/src/: utils.h
impl/src/activation/: activation.cu
impl/src/cast/: cast.cu
impl/src/conv2d/: conv2d_cudnn.cu
impl/src/datatype_convert/: datatype_convert.cu
impl/src/elementwise/: elementwise.cu
impl/src/flash_attention/: flash_api.cpp  flash_attention.cu
impl/src/flash_attention/src/: alibi.h  block_info.h  dropout.h  flash.h  flash_fwd_hdim128_fp16_causal_sm80.cu  flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_fp16_causal_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_fp16_causal_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim256_fp16_causal_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_fp16_causal_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_causal_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_fp16_causal_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu  flash_fwd_kernel.h  flash_fwd_launch_template.h  flash_fwd_split_hdim128_fp16_causal_sm80.cu  flash_fwd_split_hdim128_fp16_sm80.cu  flash_fwd_split_hdim160_fp16_causal_sm80.cu  flash_fwd_split_hdim160_fp16_sm80.cu  flash_fwd_split_hdim192_fp16_causal_sm80.cu  flash_fwd_split_hdim192_fp16_sm80.cu  flash_fwd_split_hdim256_fp16_causal_sm80.cu  flash_fwd_split_hdim256_fp16_sm80.cu  flash_fwd_split_hdim32_fp16_causal_sm80.cu  flash_fwd_split_hdim32_fp16_sm80.cu  flash_fwd_split_hdim64_fp16_causal_sm80.cu  flash_fwd_split_hdim64_fp16_sm80.cu  flash_fwd_split_hdim96_fp16_causal_sm80.cu  flash_fwd_split_hdim96_fp16_sm80.cu  kernel_traits.h  mask.h  rotary.h  softmax.h  static_switch.h  utils.h
impl/src/gelu/: gelu.cu
impl/src/gemm/: gemm.cu  gemm_cublas.cu  gemm_cutlass.cu  gemv_cuda.cu
impl/src/helper/: helper.cu  helper.h  tensor.cu
impl/src/layout_convert/: layout_convert.cu
impl/src/pooling/: pooling_cuda.cu  pooling_cudnn.cu
impl/src/rms_norm/: rms_norm.cu  rms_norm_cuda.cu
impl/src/silu/: silu_cuda.cu
test/: test_use_cuda_kernels.py
tests/: test_datatype.py  test_layout.py  test_rms_norm.py  test_silu.py  test_tensor.py  test_use_conv2d.py  test_use_cuda_kernels.py
tinyinfer/: __init__.py  build_llm.py  build_qwen2.py  config.py  edges.py  mempool.py  network.py  nodes.py  onnx_to_bin.py  params.py  read_gguf.py  runtime.py  utils.py
tinyinfer/nodes/: __init__.py  activation_node.py  apply_rope_node.py  attention_node.py  base_node.py  concat_node.py  conv_node.py  datatype_convert_node.py  elementwise_node.py  flatten_node.py  gemm_node.py  pool_node.py  repeat_kv_node.py  reshape_node.py  resize_node.py  rms_norm_node.py  silu_node.py  slice_node.py  softmax_node.py  transpose_node.py
utils/: qwen2_attention.py  qwen2_mlp.py  read_gguf.py
utils/qwen2/: __init__.py  modeling_qwen2.py  tokenization_qwen2_fast.py
